--- a/src/app.html
+++ b/src/app.html
@@ -4,7 +4,7 @@
                   <!-- campo para nome  -->
                   <lightning-input type="text" label="Nome Completo" onchange={handleOnChangeNome}></lightning-input>
                   <!-- campo para telefone -->
-                  <lightning-input type="text" label="Telefone" onchange={handleOnChangeTelefone}></lightning-input>
+                  <lightning-input type="phone" label="Telefone" onchange={handleOnChangeTelefone}></lightning-input>
                   <!-- crie um campo email,  onde o valor desse campo deve ir para uma variável email, no js -->
                   <lightning-input type="text" label="Email" onchange={handleOnChangeEmail}></lightning-input>
 
